--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -5,9 +5,9 @@ steps:
       MAVEN_PROJECT_VERSION=$(python -c "import xml.etree.ElementTree as ET; print(ET.parse(open('pom.xml')).getroot().find('{http://maven.apache.org/POM/4.0.0}version').text)")
       PROJECT_VERSION=$(echo $MAVEN_PROJECT_VERSION | sed "s/-SNAPSHOT/-$BUILDKITE_BUILD_NUMBER/")
       mvn versions:set -DnewVersion=$PROJECT_VERSION
-      mvn clean deploy -DaltDeploymentRepository=blackbelt-nexus-distribution::default::$NEXUS3_URL/repository/maven-judo-release
+      mvn clean deploy -DaltDeploymentRepository=blackbelt-nexus-distribution::default::$NEXUS3_URL/repository/maven-judo-release -s .buildkite/settings.xml
       git tag -a $PROJECT_VERSION -m '$PROJECT_VERSION' && git push origin $PROJECT_VERSION
     agents:
-      target: builder-default
+      target: assembler
 
 
