--- a/ci.yml
+++ b/ci.yml
@@ -5,5 +5,11 @@ backend-builder-version: 1.0-7_RELEASE
 maven:
   distribution-url: https://nexus.blackbelt.cloud/repository/maven-judo-release
 
-docker-images: []
+docker-zalog: &DREPO docker.blackbelt.cloud/osgi-configuration-mapper
 
+docker-images:
+  osgi-configuration-mapper:
+    image-prefix: *DREPO
+    package: target/*.ar
+    dockerfile-template: Dockerfile.j2
+    context-location: docker
