--- a/ci.yml
+++ b/ci.yml
@@ -10,6 +10,6 @@ docker-zalog: &DREPO docker.blackbelt.cloud/osgi-configuration-mapper
 docker-images:
   osgi-configuration-mapper:
     image-prefix: *DREPO
-    package: target/*.ar
+    package: target/*.jar
     dockerfile-template: Dockerfile.j2
     context-location: docker
