--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <packaging>bundle</packaging>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <pax.exam.framework>felix</pax.exam.framework>
@@ -42,6 +43,30 @@
                         <Import-Package>!lombok, com.google.common*;version="(15,30]", *</Import-Package>
                     </instructions>
                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>jaxb2-maven-plugin</artifactId>
+                <version>2.3.1</version>
+                <extensions>true</extensions>
+                <executions>
+                    <execution>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>xjc</goal>
+                        </goals>
+                        <configuration>
+                            <extension>true</extension>
+                            <sources>
+                                <source>src/main/resources/configuration_mapper_v1.xsd</source>
+                            </sources>
+                            <xjbSources>
+                                <xjbSoure>src/main/bindings/SkipElementProperties.xjc</xjbSoure>
+                            </xjbSources>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
 
             <!--
@@ -157,12 +182,6 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.16.10</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.osgi</groupId>
-            <artifactId>osgi.cmpn</artifactId>
-            <version>6.0.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
