--- a/src/test/resources/config-templates/test1.config-tst.template
+++ b/src/test/resources/config-templates/test1.config-tst.template
@@ -1,4 +1,8 @@
 # Test Properties
+env=${env}
+anotherEnv=${environment.ANOTHER_ENV}
+systemVariable=${system.systemVariable}
+
 value1=${contextVar1 ! "contextVar1TemplateDefault"}
 value2=${contextVar2 ! "contextVar2TemplateDefault"}
 value3=${contextVar3 ! "contextVar2TemplateDefault"}
