--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,26 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-install-plugin</artifactId>
+                <version>2.5.2</version>
+                <executions>
+                    <execution>
+                        <id>default-install</id>
+                        <configuration>
+                            <skip>${deployOnly}</skip>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>default-test</id>
+                        <configuration>
+                            <skip>${deployOnly}</skip>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
                 <version>3.3.0</version>
@@ -367,46 +387,38 @@
     
     <profiles>
         <profile>
-            <id>release-github</id>
+            <id>generate-github-release-body</id>
+            <activation>
+                <property>
+                    <name>github_release</name>
+                    <value>true</value>
+                </property>
+            </activation>
             <build>
                 <plugins>
                     <plugin>
-                        <groupId>de.jutzig</groupId>
-                        <artifactId>github-release-plugin</artifactId>
-                        <version>1.4.0</version>
-                        <inherited>false</inherited>
-                        <configuration>
-                            <repositoryId>${project-repositoryId}</repositoryId>
-                            <description>
-                                **Branch:** ${env.WERCKER_GIT_BRANCH}
-                                **Maven repository:** ${env.JUDONG_MAVEN_UPSTREAM_SNAPSHOT}/#browse/browse:maven-judo-release:hu%2Fblackbelt%2Feclipse%2F${project-shortname}
-                                **Wercker:** https://app.wercker.com/${project-repositoryId}/runs/build/${env.WERCKER_RUN_ID}
-                            </description>
-                            <releaseName>${project.version}</releaseName>
-                            <prerelease>true</prerelease>
-                            <tag>${project.version}</tag>
-                            <deleteRelease>true</deleteRelease>
-                            <commitish>${env.WERCKER_GIT_COMMIT}</commitish>
-                            <!--
-                            <fileSets>
-                                <fileSet>
-                                    <directory>${basedir}</directory>
-                                    <includes>
-                                        <include>**/target/*.jar</include>
-                                        <include>**/target/*.kar</include>
-                                        <include>${project-shortname}-karaf-features/target/feature/feature.xml</include>
-                                    </includes>
-                                </fileSet>
-                            </fileSets>
-                            -->
-                        </configuration>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-resources-plugin</artifactId>
+                        <version>3.2.0</version>
                         <executions>
                             <execution>
-                                <id>release-to-github</id>
-                                <phase>deploy</phase>
+                                <id>template-github-release-body</id>
+                                <phase>process-resources</phase>
                                 <goals>
-                                    <goal>release</goal>
+                                    <goal>copy-resources</goal>
                                 </goals>
+                                <configuration>
+                                    <outputDirectory>${basedir}/.release</outputDirectory>
+                                    <resources>
+                                        <resource>
+                                            <directory>${project.basedir}</directory>
+                                            <filtering>true</filtering>
+                                            <includes>
+                                                <include>.releasetemplate</include>
+                                            </includes>
+                                        </resource>
+                                    </resources>
+                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
