--- a/wercker.yml
+++ b/wercker.yml
@@ -23,18 +23,14 @@ build:
         echo "Building version: ${VERSION_NUMBER}"
 
     - wercker/maven:
+      name: Set versions
       goals: versions:set
       maven_opts: -Dtycho.mode=maven -DnewVersion=${VERSION_NUMBER}
       settings: .maven.xml
       cache_repo: true
 
-# No tycho used in this project yet
-#    - wercker/maven:
-#      goals: tycho-versions:update-eclipse-metadata
-#      cache_repo: true
-#      settings: .maven.xml
-
     - wercker/maven:
+      name: Clean deploy (with build profiles)
       goals: clean deploy
       profiles: ${BUILD_PROFILES}
       settings: .maven.xml
@@ -42,6 +38,7 @@ build:
       cache_repo: true
 
     - wercker/maven:
+      name: Deploy (with deploy profiles)
       goals: deploy
       settings: .maven.xml
       maven_opts: -DdeployOnly -DskipTests=true -Dgithub_release=true
@@ -87,20 +84,20 @@ release:
 #      keyname: GITHUB_SSH_KEY
 
     - script:
-      name: set git remote origis
+      name: Set git remote origis
       code: |-
              git remote set-url origin https://$GITHUB_ACCESS_TOKEN@github.com/$WERCKER_GIT_OWNER/$WERCKER_GIT_REPOSITORY.git
              git fetch origin
 
     - script:
-      name: display branches
+      name: Display branches
       code: |-
              git branch -a
              git branch -r
 
 
     - script:
-      name: setup git for maven
+      name: Set up git for maven
       code: |-
              git config --global user.email "oss@blackbelt.hu"
              git config --global user.name "Wercker Release"
@@ -108,12 +105,12 @@ release:
     - blackbelttechnology/version-from-git-tag@1.0.8
 
     - script:
-      name: reset git state to actual commit
+      name: Reset git state to actual commit
       code: |-
              git reset --hard $WERCKER_GIT_COMMIT
 
     - script:
-      name: create barnch for builder
+      name: Create branch for builder
       code: |-
              git branch wercker_$WERCKER_RUN_ID
 
@@ -121,18 +118,20 @@ release:
       pom: ./pom.xml
 
     - script:
-      name: create release branch from current commit
+      name: Create release branch from current commit
       code: |-
              git checkout -b release/v$VERSION_FROM_POM_BASE_VERSION wercker_$WERCKER_RUN_ID
 
 ## Deploy using release plugin
 #    - wercker/maven:
+#      name: Prepare release
 #      goals: release:prepare
 #      settings: .maven.xml
 #      profiles: release-blackbelt
 #      cache_repo: true
 #
 #    - wercker/maven:
+#      name: Perform release
 #      goals: release:perform
 #      settings: .maven.xml
 #      profiles: release-blackbelt
@@ -141,18 +140,14 @@ release:
 # Set version and deploy with steps
 
     - wercker/maven:
+      name: Set versions
       goals: versions:set
-      maven_opts: -DnewVersion=${VERSION_FROM_POM_BASE_VERSION} -DgenerateBackupPoms=false
+      maven_opts: -Dtycho.mode=maven -DnewVersion=${VERSION_FROM_POM_BASE_VERSION} -DgenerateBackupPoms=false
       settings: .maven.xml
       cache_repo: true
 
-# No tycho used in this project yet
-#    - wercker/maven:
-#      goals: tycho-versions:update-eclipse-metadata
-#      cache_repo: true
-#      settings: .maven.xml
-
     - wercker/maven:
+      name: Clean deploy (with release profiles)
       goals: clean deploy
       profiles: ${RELEASE_PROFILES}
       settings: .maven.xml
@@ -160,6 +155,7 @@ release:
       cache_repo: true
 
     - wercker/maven:
+      name: Deploy (with deploy profiles)
       goals: deploy
       settings: .maven.xml
       maven_opts: -DdeployOnly -DskipTests=true -Dgithub_release=true
@@ -167,22 +163,22 @@ release:
       cache_repo: true
 
     - script:
-      name: commit the release
+      name: Commit release
       code: |-
              git add .
              git commit -m "Release v$VERSION_FROM_POM_BASE_VERSION"
 
     - script:
-      name: tag release branch
+      name: Tag release branch
       code: |-
              git tag -a v$VERSION_FROM_POM_BASE_VERSION -m "Release v$VERSION_FROM_POM_BASE_VERSION"
 
     - script:
-      name: increase version number
+      name: Increase version number
       code: "mvn build-helper:parse-version versions:set -DnewVersion=\\${parsedVersion.majorVersion}.\\${parsedVersion.minorVersion}.\\${parsedVersion.nextIncrementalVersion}-SNAPSHOT -DgenerateBackupPoms=false -f ./pom.xml  -Dmaven.repo.local=$WERCKER_CACHE_DIR/.m2"
  
     - script:
-      name: commit to release branch
+      name: Commit to release branch
       code: |-
              git add .
              git commit -m "Next development cycle"
@@ -190,50 +186,49 @@ release:
 # End of deploy
 
     - script:
-      name: get back to the develop branch
+      name: Get back to the develop branch
       code: |-
              git checkout develop
 
     - script:
-      name: merge the version back into develop
+      name: Merge the version back into develop
       code: |-
              git merge --no-ff release/v$VERSION_FROM_POM_BASE_VERSION
 
 
     - script:
-      name: git checkout master
+      name: Checkout master
       code: |-
              git checkout master
 
 
     - script:
-      name: merge the version back into master but the tagged version instead of the release/v0.1 HEAD
+      name: Merge the version back into master, but the tagged version instead of the release/v0.1 HEAD
       code: |-
              git merge --no-ff release/v$VERSION_FROM_POM_BASE_VERSION~1
 
     - script:
-      name: draw git
+      name: Draw git
       code: |-
              git log --graph --oneline --all
 
 
     - script:
-      name: delete release branch
+      name: Delete release branch
       code: |-
              git branch -D release/v$VERSION_FROM_POM_BASE_VERSION
 
     - script:
-      name: delete builder branch
+      name: Delete builder branch
       code: |-
              git branch -D wercker_$WERCKER_RUN_ID
 
 
     - script:
-      name: push everything
+      name: Push everything
       code: |-
              git push origin --all
              git push origin --tags
-
 
     - script:
       name: get github release attributes
