--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
+#*.jar - in order for maven-wrapper.jar
 *.war
 *.ear
 *.zip
@@ -56,3 +56,4 @@ hs_err_pid*
 .wercker
 wercker.env
 .release
+**/.flattened-pom.xml
