--- a/pom.xml
+++ b/pom.xml
@@ -151,7 +151,7 @@
                 </executions>
             </plugin>
 
-            <plugin>                                                                        <!--megneztem-->
+            <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
                 <version>5.1.2</version>
@@ -232,7 +232,7 @@
                 </executions>
             </plugin>
 
-            <plugin>                                                                <!--added till the end-->
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
                 <version>3.0.0</version>
@@ -301,12 +301,12 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.osgi</groupId>                                                             <!--we need this?-->
+            <groupId>org.osgi</groupId>
             <artifactId>org.osgi.service.component.annotations</artifactId>
             <version>1.3.0</version>
         </dependency>
         <dependency>
-            <groupId>org.osgi</groupId>                                                             <!--we need this?-->
+            <groupId>org.osgi</groupId>
             <artifactId>org.osgi.service.metatype.annotations</artifactId>
             <version>1.3.0</version>
         </dependency>
@@ -330,7 +330,7 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>                                                             <!--we need this?-->
+        <dependency>
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
             <version>2.3.28</version>
@@ -343,7 +343,7 @@
             <scope>provided</scope>
         </dependency>
 
-        <dependency>                                                            <!--we need this?-->
+        <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
             <version>2.2</version>
