--- a/pom.xml
+++ b/pom.xml
@@ -27,10 +27,10 @@
         <felix.osgi.version>5.6.12</felix.osgi.version>
         <exam.version>4.13.4</exam.version>
         <url.version>1.6.0</url.version>
-        <karaf-version>4.3.4</karaf-version>
+        <karaf-version>4.4.3</karaf-version>
         <revision>1.0.1-SNAPSHOT</revision>
 
-        <surefire-version>3.0.0-M7</surefire-version>
+        <surefire-version>3.0.0</surefire-version>
 
         <!--suppress UnresolvedMavenProperty -->
         <logback-test-config>${maven.multiModuleProjectDirectory}/logback-test.xml</logback-test-config>
@@ -133,7 +133,7 @@
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>build-helper-maven-plugin</artifactId>
-                    <version>3.0.0</version>
+                    <version>3.4.0</version>
                 </plugin>
 
                 <plugin>
@@ -265,7 +265,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
-                <version>3.0.0</version>
+                <version>3.4.0</version>
                 <executions>
                     <execution>
                         <id>add-source</id>
@@ -436,7 +436,7 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>27.1-jre</version>
+            <version>30.0-jre</version>
         </dependency>
 
         <dependency>
